--- a/django.html
+++ b/django.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <h1>  Framework de Python </h1>
+    <h2> Framewok Python </h2>
+    <a href="index.html">INICIO</a>
     
 </body>
 
