--- a/django.html
+++ b/django.html
@@ -9,8 +9,71 @@
 </head>
 
 <body>
+    <p style="text-align:center;"><img src="imagenes/djangoIMG.png" alt="logo"></p>
     <h2> Framewok Python </h2>
-    <a href="index.html">INICIO</a>
+    <p style="text-align:center;"><a href="index.html">INICIO</a></p>
+    
+    <h2>Detalles generales</h2>
+    <table>
+        <tr>
+            <td>Disponible para IOS</td>
+        <td>SI</td>
+        </tr>
+        <tr>
+            <td>Pagina oficial</td>
+            <td>www.djangoproject.com</td>
+        </tr>
+        <tr>
+            <td>Tipo de licencia</td>
+        <td>BSD</td>
+        </tr>
+    </table>
+
+    <p>
+        Es un framework web para Python de alto
+nivel.
+Características:
+Orientado a objetos
+Open source
+Desarrollado en Python
+Ventajas:
+Integridad variada en bibliotecas
+Velocidad de desarrollo desde la definición de la aplicación hasta su desplegue
+Escalabilidad y flexibilidad
+Desventajas:
+Requiere conomientos extras en la aplicación de arquitecturas Rest
+Compleja integración con sockets
+Extensa documentación
+Tipo de licencia:
+BSD
+Análisis de curvatura de aprendizaje:
+Debido a su popularidad su curva de aprendizaje se considera corto
+    </p>
+
+    <h2>Descripcion multimedia de Django</h2>
+    <video src="video/Framework-Django.mp4" autoplay loop width="1140" height="980"></video>
+
+    <p style="text-align:center;"><img src="imagenes/djangoIMG.png" alt="logo"></p>
+
+    <h3> ---- MENU PRINCIPAL ---- </h3>
+       <ul>
+            <Li>
+                <a href="docker.html">Docker</a>
+            </Li>
+            <Li>
+                <a href="django.html">Django</a>
+            </Li>
+            <Li>
+                <a href="expressJS.html">ExpressJS</a>
+            </Li>
+            <Li>
+                <a href="jenkins.html">Jenkins</a>
+            </Li>
+            <Li>
+                <a href="lavarel.html">Lavarel</a>
+            </Li>
+        </ul>
+
     
 </body>
 
