--- a/docker.html
+++ b/docker.html
@@ -9,9 +9,59 @@
 </head>
 
 <body>
-    <h2> CONTENEDORES </h2>
-    <a href="index.html">INICIO</a>
+    <p style="text-align:center;"><img src="imagenes/DockerIMG.png" alt="logo"></p>
+    <h2>CONTENEDORES </h2>
+    <p style="text-align:center;"><a href="index.html">INICIO</a></p>
     
+    <h2>Detalles generales</h2>
+    <table>
+        <tr>
+            <td>Disponible para Linux</td>
+        <td>SI</td>
+        </tr>
+        <tr>
+            <td>Disponible para Windows</td>
+            <td>SI</td>
+        </tr>
+        <tr>
+            <td>Soporte 24/7</td>
+        <td>NO</td>
+        </tr>
+    </table>
+
+    <p>
+        A diferencia de sistemas monolíticos Docker se enfoca a una arquitectura
+microservicios. Esta tecnológica utiliza contenedores para la construcción y
+despliegue de aplicaciones de forma estandarizada. Haciendo referencia a la
+introducción, los contenedores permiten el empaquetar aplicaciones y sus
+dependencias en una imagen virtual. Como analogía, las maquinas virtuales son
+creadas para almacenar aplicaciones, y sus dependencias se rigen al sistema
+operativo,lo que requiere un uso total de recursos para una aplicación que
+corre en un determinado SO; Docker permite crear imágenes y usar exclusivamente
+las dependencias de la aplicación y no exige la instalación de todo un SO. Esto
+optimiza recursos en el sistema.
+    </p>
+
+    <p style="text-align:center;"><img src="imagenes/DockerIMG.png" alt="logo"></p>
+
+    <h3> ---- MENU PRINCIPAL ---- </h3>
+       <ul>
+            <Li>
+                <a href="docker.html">Docker</a>
+            </Li>
+            <Li>
+                <a href="django.html">Django</a>
+            </Li>
+            <Li>
+                <a href="expressJS.html">ExpressJS</a>
+            </Li>
+            <Li>
+                <a href="jenkins.html">Jenkins</a>
+            </Li>
+            <Li>
+                <a href="lavarel.html">Lavarel</a>
+            </Li>
+        </ul>
 </body>
 
 </html>
