--- a/jenkins.html
+++ b/jenkins.html
@@ -9,9 +9,50 @@
 </head>
 
 <body>
+    <p style="text-align:center;"><img src="imagenes/JenkinsIMG.jpeg" alt="logo"></p>
     <h2> Integracion Continua  </h2>
-    <a href="index.html">INICIO</a>
-    
+    <p style="text-align:center;"><a href="index.html">INICIO</a></p>
+
+    <p>
+        Forma parte de una integración continua y despliegue continuo. Esta tecnología,
+se enfoca en la automatización de despliegues y la integración continua de
+aplicaciones a gran escala, siendo un servidor de de automatizaciones con mayor
+popularidad en la actualizada.
+Características:
+Desarrollado en Java
+Open source
+Extenso alcance en plugins
+lanzado en 2011
+Ventajas:
+Gran alcance en plugins
+Orquesta varios tipos de procesos
+Automatizaciones de gran alcance
+Desventajas:Coste en servidores dedicados
+Requiere conocimientos cualificado
+Problemas con plugins para proceso no nativos
+Tipo de licencia:
+MIT y Creative Commons
+    </p>
+
+    <p style="text-align:center;"><img src="imagenes/JenkinsIMG.jpeg" alt="logo"></p>
+    <h3> ---- MENU PRINCIPAL ---- </h3>
+       <ul>
+            <Li>
+                <a href="docker.html">Docker</a>
+            </Li>
+            <Li>
+                <a href="django.html">Django</a>
+            </Li>
+            <Li>
+                <a href="expressJS.html">ExpressJS</a>
+            </Li>
+            <Li>
+                <a href="jenkins.html">Jenkins</a>
+            </Li>
+            <Li>
+                <a href="lavarel.html">Lavarel</a>
+            </Li>
+        </ul>
 </body>
 
 </html>
