--- a/lavarel.html
+++ b/lavarel.html
@@ -9,8 +9,49 @@
 </head>
 
 <body>
+    <p style="text-align:center;"><img src="imagenes/lavarel.png" alt="logo"></p>
     <h2> Framework PHP </h2>
-    <a href="index.html">INICIO</a>
+    <p style="text-align:center;"><a href="index.html">INICIO</a></p>
+    <p>
+        Framework web dedicado a PHP.
+Características:
+Lanzamiento: 2011
+soporta la ultima version de PHP 8, incluida la version 5 y 7
+Su escritura de codigo se denomina “espagueti”
+Utiliza la arquitectura Modelo vista controlador
+Influenciada por Ruby on Rails
+
+Ventajas:
+Puede utilizar servidores web Nginx, IIS o Apache
+Se destaca por sus sintaxis en su código escrito en PHP
+Utiliza scripting
+interfaz interactivaDesventajas:
+No soporta versiones inferiores a PHP 5.4
+Tipo de licencia:
+MIT
+Análisis de curvatura de aprendizaje:
+Debido a su extensa aplicación, su curva de aprendizaje se considera lenta.
+    </p>
+    <p style="text-align:center;"><img src="imagenes/lavarel.png" alt="logo"></p>
+    
+    <h3> ---- MENU PRINCIPAL ---- </h3>
+       <ul>
+            <Li>
+                <a href="docker.html">Docker</a>
+            </Li>
+            <Li>
+                <a href="django.html">Django</a>
+            </Li>
+            <Li>
+                <a href="expressJS.html">ExpressJS</a>
+            </Li>
+            <Li>
+                <a href="jenkins.html">Jenkins</a>
+            </Li>
+            <Li>
+                <a href="lavarel.html">Lavarel</a>
+            </Li>
+        </ul>
     
 </body>
 
